--- a/Map_Page.ipynb
+++ b/Map_Page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read \n",
-    "india = json.load(open('state/india_state.geojson'))\n",
+    "india = json.load(open('state/india_states.geojson'))\n",
     "\n",
     "#  Read in the district-level data\n",
     "districts = gpd.read_file('district/india_district.geojson')\n",
@@ -35,44 +35,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mrbha\\AppData\\Local\\Temp\\ipykernel_22464\\2343628423.py:12: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
+      "  jkld = cascaded_union([jk, ld])\n",
+      "C:\\Users\\mrbha\\AppData\\Local\\Temp\\ipykernel_22464\\2343628423.py:27: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
+      "  apts = cascaded_union([ap, ts])\n"
+     ]
+    }
+   ],
    "source": [
-    "# replace and with & in the state name\n",
+    "# combine ladakh and jammu and kashmir area into one in the geojson file\n",
+    "from shapely.geometry import shape, mapping\n",
+    "from shapely.ops import cascaded_union\n",
     "for i in range(len(india['features'])):\n",
-    "    state = india['features'][i]['properties']['NAME_1']\n",
-    "    state = state.replace(' and ', ' & ')\n",
-    "    india['features'][i]['properties']['NAME_1'] = state"
+    "    if india['features'][i]['properties']['ST_NM'] == 'Jammu & Kashmir':\n",
+    "        india['features'][i]['properties']['ST_NM'] = 'Jammu and Kashmir and Ladakh'\n",
+    "        jk = shape(india['features'][i]['geometry'])\n",
+    "    if india['features'][i]['properties']['ST_NM'] == 'Ladakh':\n",
+    "        india['features'][i]['properties']['ST_NM'] = 'Jammu and Kashmir and Ladakh'\n",
+    "        ld = shape(india['features'][i]['geometry'])\n",
+    "\n",
+    "jkld = cascaded_union([jk, ld])\n",
+    "# remove ladakh and jammu and kashmir area from the geojson file\n",
+    "india['features'] = [i for i in india['features'] if i['properties']['ST_NM'] != 'Jammu and Kashmir and Ladakh']\n",
+    "# add the combined ladakh and jammu and kashmir area to the geojson file\n",
+    "india['features'].append({'type': 'Feature', 'properties': {'ST_NM': 'Jammu & Kashmir'}, 'geometry': mapping(jkld)})\n",
+    "\n",
+    "# do same for Andhra Pradesh and Telangana\n",
+    "for i in range(len(india['features'])):\n",
+    "    if india['features'][i]['properties']['ST_NM'] == 'Andhra Pradesh':\n",
+    "        india['features'][i]['properties']['ST_NM'] = 'Andhra Pradesh and Telangana'\n",
+    "        ap = shape(india['features'][i]['geometry'])\n",
+    "    if india['features'][i]['properties']['ST_NM'] == 'Telangana':\n",
+    "        india['features'][i]['properties']['ST_NM'] = 'Andhra Pradesh and Telangana'\n",
+    "        ts = shape(india['features'][i]['geometry'])\n",
+    "    \n",
+    "apts = cascaded_union([ap, ts])\n",
+    "india['features'] = [i for i in india['features'] if i['properties']['ST_NM'] != 'Andhra Pradesh and Telangana']\n",
+    "india['features'].append({'type': 'Feature', 'properties': {'ST_NM': 'Andhra Pradesh'}, 'geometry': mapping(apts)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary to map the state name to the state id\n",
+    "# create a dictionary to map the state name to a number\n",
     "state_id_map = {}\n",
     "for feature in india['features']:\n",
-    "    feature['id'] = feature['properties']['ID_1']\n",
-    "    state_id_map[feature['properties']['NAME_1']] = feature['id']"
+    "    feature['id'] = feature['properties']['ST_NM']\n",
+    "    state_id_map[feature['properties']['ST_NM']] = feature['id']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "state_id_map['Andaman & Nicobar Islands'] = state_id_map['Andaman & Nicobar']\n",
     "state_id_map['Chattisgarh'] = state_id_map['Chhattisgarh']\n",
-    "state_id_map['Pondicherry'] = state_id_map['Puducherry']"
+    "state_id_map['Orissa'] = state_id_map['Odisha']\n",
+    "state_id_map['Pondicherry'] = state_id_map['Puducherry']\n",
+    "state_id_map['Dadra & Nagar Haveli'] = state_id_map['Dadra and Nagar Haveli and Daman and Diu']\n",
+    "state_id_map['Daman & Diu'] = state_id_map['Dadra and Nagar Haveli and Daman and Diu']\n",
+    "state_id_map['Uttaranchal'] = state_id_map['Uttarakhand']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +244,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "      <th>Apr</th>\n",
+       "      <th>May</th>\n",
+       "      <th>Jun</th>\n",
+       "      <th>Jul</th>\n",
+       "      <th>Aug</th>\n",
+       "      <th>Sep</th>\n",
+       "      <th>Oct</th>\n",
+       "      <th>Nov</th>\n",
+       "      <th>Dec</th>\n",
+       "      <th>vlookup</th>\n",
+       "      <th>id</th>\n",
+       "      <th>ID_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>Andaman</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andaman &amp; Nicobar IslandsAndaman</td>\n",
+       "      <td>Andaman &amp; Nicobar</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andaman &amp; Nicobar Islands</td>\n",
+       "      <td>Nicobar</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andaman &amp; Nicobar IslandsNicobar</td>\n",
+       "      <td>Andaman &amp; Nicobar</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>Adilabad</td>\n",
+       "      <td>1901.0</td>\n",
+       "      <td>6.725</td>\n",
+       "      <td>10.488</td>\n",
+       "      <td>23.288</td>\n",
+       "      <td>35.560</td>\n",
+       "      <td>23.119</td>\n",
+       "      <td>115.546</td>\n",
+       "      <td>294.119</td>\n",
+       "      <td>276.865</td>\n",
+       "      <td>181.615</td>\n",
+       "      <td>47.310</td>\n",
+       "      <td>1.339</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>Andhra PradeshAdilabad</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>Adilabad</td>\n",
+       "      <td>1902.0</td>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.388</td>\n",
+       "      <td>6.070</td>\n",
+       "      <td>3.331</td>\n",
+       "      <td>45.960</td>\n",
+       "      <td>233.973</td>\n",
+       "      <td>167.971</td>\n",
+       "      <td>198.177</td>\n",
+       "      <td>26.447</td>\n",
+       "      <td>35.083</td>\n",
+       "      <td>11.222</td>\n",
+       "      <td>Andhra PradeshAdilabad</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>Adilabad</td>\n",
+       "      <td>1903.0</td>\n",
+       "      <td>6.643</td>\n",
+       "      <td>1.956</td>\n",
+       "      <td>0.173</td>\n",
+       "      <td>4.551</td>\n",
+       "      <td>33.348</td>\n",
+       "      <td>132.078</td>\n",
+       "      <td>436.611</td>\n",
+       "      <td>334.544</td>\n",
+       "      <td>226.037</td>\n",
+       "      <td>138.818</td>\n",
+       "      <td>14.095</td>\n",
+       "      <td>8.823</td>\n",
+       "      <td>Andhra PradeshAdilabad</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       State  District    Year    Jan     Feb     Mar     Apr   \n",
+       "0  Andaman & Nicobar Islands   Andaman     NaN    NaN     NaN     NaN     NaN  \\\n",
+       "1  Andaman & Nicobar Islands   Nicobar     NaN    NaN     NaN     NaN     NaN   \n",
+       "2             Andhra Pradesh  Adilabad  1901.0  6.725  10.488  23.288  35.560   \n",
+       "3             Andhra Pradesh  Adilabad  1902.0  0.420   0.000   0.388   6.070   \n",
+       "4             Andhra Pradesh  Adilabad  1903.0  6.643   1.956   0.173   4.551   \n",
+       "\n",
+       "      May      Jun      Jul      Aug      Sep      Oct     Nov     Dec   \n",
+       "0     NaN      NaN      NaN      NaN      NaN      NaN     NaN     NaN  \\\n",
+       "1     NaN      NaN      NaN      NaN      NaN      NaN     NaN     NaN   \n",
+       "2  23.119  115.546  294.119  276.865  181.615   47.310   1.339   0.000   \n",
+       "3   3.331   45.960  233.973  167.971  198.177   26.447  35.083  11.222   \n",
+       "4  33.348  132.078  436.611  334.544  226.037  138.818  14.095   8.823   \n",
+       "\n",
+       "                            vlookup                 id  ID_2  \n",
+       "0  Andaman & Nicobar IslandsAndaman  Andaman & Nicobar     1  \n",
+       "1  Andaman & Nicobar IslandsNicobar  Andaman & Nicobar     2  \n",
+       "2            Andhra PradeshAdilabad     Andhra Pradesh     3  \n",
+       "3            Andhra PradeshAdilabad     Andhra Pradesh     3  \n",
+       "4            Andhra PradeshAdilabad     Andhra Pradesh     3  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['ID_2'] = df['District'].apply(lambda x: district_id_map[x])\n",
     "df.head()"
@@ -215,7 +433,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_id_map['Andaman and Nicobar'] = state_id_map['Andaman & Nicobar']\n",
+    "state_id_map['Dadra and Nagar Haveli'] = state_id_map['Dadra & Nagar Haveli']\n",
+    "state_id_map['Daman and Diu'] = state_id_map['Daman & Diu']\n",
+    "state_id_map['Jammu and Kashmir'] = state_id_map['Jammu & Kashmir']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "districts['sid'] = districts['NAME_1'].apply(lambda x: state_id_map[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +463,7 @@
     "    df_dynamic = df[df['Year'] == year]\n",
     "    df_dynamic = df_dynamic[df_dynamic['id'] == state_id]\n",
     "    # choose the map for the state\n",
-    "    districts_dynamic = districts[districts['ID_1'] == state_id]\n",
+    "    districts_dynamic = districts[districts['sid'] == state_id]\n",
     "    # name  the ID_2 column as id\n",
     "    districts_dynamic = districts_dynamic.rename(columns={'ID_2': 'id'})\n",
     "    # specify this id as featureid key\n",
@@ -243,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,9 +492,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:8050\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:29] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:30] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:30] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:31] \"GET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:31] \"GET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:31] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:31] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:31] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:31] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Uttar Pradesh\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:44:39] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Bihar\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:44:42] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Apr/2023 02:44:45] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Jammu & Kashmir\n",
+      "Jan 2002 Andhra Pradesh\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:44:59] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Bihar\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:45:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Madhya Pradesh\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:45:10] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Rajasthan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:45:12] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan 2002 Uttarakhand\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Apr/2023 02:45:13] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the layout\n",
     "app.layout = html.Div([\n",
@@ -285,7 +653,7 @@
     "    html.H4('Click on the state to see the district map'),\n",
     "    dcc.Graph(id='india_map', figure=plot_rainfall('Jan', 2002)),\n",
     "    html.H3('State Map'),\n",
-    "    dcc.Graph(id='district_map', figure=state_map('Jan', 2002, 10))\n",
+    "    dcc.Graph(id='district_map', figure=state_map('Jan', 2002, 'Bihar'))\n",
     "    ], \n",
     "    # display the india map and state map side by side\n",
     "    style={'columnCount': 2})\n",
