We love Harshita

--- a/Run_this_notebook.ipynb
+++ b/Run_this_notebook.ipynb
@@ -1644,8 +1644,7 @@
     }
    ],
    "source": [
-    "df['ID_2'] = df['District'].apply(lambda x: district_id_map[x])\n",
-    "df.head()"
+    "df['ID_2'] = df['District'].apply(lambda x: district_id_map[x])"
    ]
   },
   {
@@ -1710,7 +1709,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create the layout\n",
@@ -1824,7 +1825,6 @@
     "        state_id = 'Bihar'\n",
     "    else:\n",
     "        state_id = state_id['points'][0]['location']\n",
-    "        print(month, year, state_id)\n",
     "    return state_map(month, year, state_id)\n",
     "\n",
     "# callback for the india map\n",
