--- a/Map_Page.ipynb
+++ b/Map_Page.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read \n",
+    "# Read the map\n",
     "india = json.load(open('state/india_states.geojson'))\n",
     "\n",
     "#  Read in the district-level data\n",
